--- a/.github/workflows/grs.yml
+++ b/.github/workflows/grs.yml
@@ -19,7 +19,7 @@ jobs:
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: stats
-          options: username=${{ github.repository_owner }}&show_icons=true
+          options: username=${{ github.repository_owner }}&show_icons=true&theme=swift&count_private=true
           path: profile/stats.svg
           token: ${{ secrets.GitHub_Readme_Stats }}
 
